[package]
name = "rust-socks"
version = "0.1.0"
authors = ["Simon Martin <smartin@scottlogic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["compat"] }
url = "2.1.1"              # URL library for Rust, based on the WHATWG URL Standard
